добавила в разметку класс reset-list

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
         <span class="visually-hidden">Открыть меню.</span>
       </button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list ">
+        <ul class="main-nav__list reset-list">
           <li class="main-nav__item ">
             <a href="/index.html">Главная</a>
           </li>
@@ -41,7 +41,7 @@
     <section class="catalog-product-cards">
       <div class="catalog-product-cards__wrapper">
         <h1 class="catalog-product-cards__title">Каталог продукции</h1>
-        <ul class="catalog-product-cards__list product-card">
+        <ul class="catalog-product-cards__list product-card reset-list">
           <!--карточка товара 1-->
           <li class="product-card__item">
             <img class="product-card__icon" src="img/product-card-cat-energy-pro-chicken-500.png"
@@ -207,7 +207,7 @@
     <section class="additional-products">
       <div class="additional-products__wrapper">
         <h2 class="additional-products__title">Дополнительные товары</h2>
-        <ul class="additional-products__cards">
+        <ul class="additional-products__cards reset-list">
           <li class="additional-products__item">
             <h3 class="additional-products__name-card">Сахарозаменитель</h3>
             <table class="additional-products__info-card">
@@ -283,7 +283,7 @@
 
       <section class="footer__social ">
         <h3 class="visually-hidden">Наши социальные сети.</h3>
-        <ul class="footer__social-list footer-social">
+        <ul class="footer__social-list footer-social reset-list">
           <li class="footer-social__item">
             <a class="footer-social__link" href="#">
               <span class="visually-hidden">Вконтакте.</span>
