--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
         <span class="visually-hidden">Открыть меню.</span>
       </button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list ">
+        <ul class="main-nav__list reset-list">
           <li class="main-nav__item ">
             <a href="/index.html">Главная</a>
           </li>
@@ -44,7 +44,7 @@
         </h3>
         <form class="program-selection__questionnaire questionnaire" action="https://echo.htmlacademy.ru/"
           method="post">
-          <ul class="questionnaire__cat-data cat-data">
+          <ul class="questionnaire__cat-data cat-data reset-list">
             <li class="cat-data__item">
               <label class="cat-data__name cat-data__name--nickname">ИМЯ:*
                 <input class="cat-data__name-form cat-data__name-form--nickname" type="text" name="name-cat"
@@ -66,7 +66,7 @@
           <div class="questionnaire__purpose-program purpose-program">
             <fieldset class="purpose-program__form">
               <legend class="visually-hidden"> Цель программы питания.</legend>
-              <ul class="purpose-program__list">
+              <ul class="purpose-program__list reset-list">
                 <li class="purpose-program__item">
                   <label class="purpose-program__slim">
                     <input class="purpose-program__slim-form" type="radio" name="purpose-program" value="program-slim"
@@ -90,7 +90,7 @@
           </div>
           <div class="questionnaire__contact contact">
             <h3 class="contact__title">Контактные данные (владельца кота)</h3>
-            <ul class="contact__list">
+            <ul class="contact__list reset-list">
               <li class="contact__item">
                 <label class="contact__label contact__label--email">E-mail:*
                   <input class="contact__input contact__input--emai" type="email" value="kuklachev@gmail.com"
@@ -116,7 +116,7 @@
           <div class="questionnaire__additionally additionally">
             <fieldset class="additionally__form">
               <legend class="additionally__buy-more ">Дополнительно</legend>
-              <ul class="additionally__list">
+              <ul class="additionally__list reset-list">
                 <li class="additionally__item">
                   <label class="additionally__fake-sugar">
                     <input class="additionally__fake-sugar-form" type="checkbox" name="additionally" value="fake-sugar"
@@ -175,7 +175,7 @@
 
       <section class="footer__social ">
         <h3 class="visually-hidden">Наши социальные сети.</h3>
-        <ul class="footer__social-list footer-social">
+        <ul class="footer__social-list footer-social reset-list">
           <li class="footer-social__item">
             <a class="footer-social__link" href="#">
               <span class="visually-hidden">Вконтакте.</span>
