--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,167 +44,171 @@
     <section class="catalog-product-cards">
       <div class="catalog-product-cards__wrapper">
         <h1 class="catalog-product-cards__title">Каталог продукции</h1>
-        <ul class="catalog-product-cards__list product-card reset-list">
-          <!--карточка товара 1-->
-          <li class="product-card__item">
-            <img class="product-card__icon" src="img/product-card-cat-energy-pro-chicken-500.png"
-              alt="Кэт энерджи про 500 грамм со вкусом курицы." width="68" height="86">
-            <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+        <div class="catalog-product-cards__wrapper-table">
+          <ul class="catalog-product-cards__list product-card reset-list">
+            <!--карточка товара 1-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-pro-chicken-500.png"
+                alt="Кэт энерджи про 500 грамм со вкусом курицы." width="68" height="86">
+              <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>500 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 2-->
-          <li class="product-card__item">
-            <img class="product-card__icon" src="img/product-card-cat-energy-pro-chicken-1000.png"
-              alt="Кэт энерджи про 1000 грамм со вкусом курицы." width="84" height="101">
-            <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>1000 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+            <!--карточка товара 2-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-pro-chicken-1000.png"
+                alt="Кэт энерджи про 1000 грамм со вкусом курицы." width="84" height="101">
+              <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>1000 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 3-->
-          <li class="product-card__item">
-            <img class="product-card__icon-" src="img/product-card-cat-energy-pro-fish-500.png"
-              alt="Кэт энерджи про 500 грамм со вкусом рыбы." width="68" height="78">
-            <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+            <!--карточка товара 3-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-pro-fish-500.png"
+                alt="Кэт энерджи про 500 грамм со вкусом рыбы." width="68" height="78">
+              <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>500 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Рыба</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 4-->
-          <li class="product-card__item">
-            <img class="product-card__icon" src="img/product-card-cat-energy-pro-fish-1000.png"
-              alt="Кэт энерджи про 1000 грамм со вкусом рыбы." width="84" height="101">
-            <h3 class="product-card__title">Cat Energy PRO 1000 г </h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>1000 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+            <!--карточка товара 4-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-pro-fish-1000.png"
+                alt="Кэт энерджи про 1000 грамм со вкусом рыбы." width="84" height="101">
+              <h3 class="product-card__title">Cat Energy PRO 1000 г </h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Рыба</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>1000 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 5-->
-          <li class="product-card__item">
-            <img class="product-card__icon" src="img/product-card-cat-energy-slim-buckwheat-500.png"
-              alt="Кэт энерджи слим 500 грамм со вкусом гречки." width="68" height="78">
-            <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>400 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+            <!--карточка товара 5-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-slim-buckwheat-500.png"
+                alt="Кэт энерджи слим 500 грамм со вкусом гречки." width="68" height="78">
+              <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>500 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Гречка</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>400 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 6-->
-          <li class="product-card__item">
-            <img class="product-card-item-icon" src="img/product-card-cat-energy-slim-buckwheat-1000.png"
-              alt="Кэт энерджи слим 1000 грамм со вкусом гречки." width="84" height="100">
-            <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
+            <!--карточка товара 6-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-slim-buckwheat-1000.png"
+                alt="Кэт энерджи слим 1000 грамм со вкусом гречки." width="84" height="100">
+              <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Гречка</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
 
-          <!--карточка товара 7-->
-          <li class="product-card__item">
-            <img class="product-card__icon" src="img/product-card-cat-energy-slim-rice-500.png"
-              alt="Кэт энерджи слим 500 грамм со вкусом риса." width="72" height="84">
-            <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
-            <table class="product-card__details">
-              <tr class="mass">
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr class="taste">
-                <td>Вкус</td>
-                <td>Рис</td>
-              </tr>
-              <tr class="price">
-                <td>Цена</td>
-                <td>500 Р.</td>
-              </tr>
-            </table>
-            <button class="product-card__button-order">Заказать</button>
-          </li>
-        </ul>
+            <!--карточка товара 7-->
+            <li class="product-card__item">
+              <img class="product-card__icon" src="img/product-card-cat-energy-slim-rice-500.png"
+                alt="Кэт энерджи слим 500 грамм со вкусом риса." width="72" height="84">
+              <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+              <table class="product-card__details">
+                <tr class="mass">
+                  <td>Масса</td>
+                  <td>500 г</td>
+                </tr>
+                <tr class="taste">
+                  <td>Вкус</td>
+                  <td>Рис</td>
+                </tr>
+                <tr class="price">
+                  <td>Цена</td>
+                  <td>500 Р.</td>
+                </tr>
+              </table>
+              <button class="product-card__button-order">Заказать</button>
+            </li>
+
+            <li class="catalog-product-cards__all-catalog all-catalog">
+              <h2 class="all-catalog__title">Показать еще 100500 товаров</h2>
+              <h3 class="all-catalog__subtitle">На самом деле вкусов гораздо больше!</h3>
+              <button class="all-catalog__button">показать все</button>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="catalog-product-cards__all-catalog all-catalog">
-        <h2 class="all-catalog__title">Показать еще 100500 товаров</h2>
-        <h3 class="all-catalog__subtitle">На самом деле вкусов гораздо больше!</h3>
-        <button class="all-catalog__button">показать все</button>
-      </div>
+
     </section>
     <!--Дополнительные товары-->
     <section class="additional-products">
