--- a/source/index.html
+++ b/source/index.html
@@ -28,10 +28,10 @@
               <a href="#">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
+              <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link" href="/form.html">Подбор программы</a>
+              <a class="main-nav__link" href="./form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
