--- a/source/index.html
+++ b/source/index.html
@@ -13,19 +13,22 @@
       <a class="main-header__logo-cat logotype" href="./index.html">
         <img class="logotype__logo-cat--mobile" src="img/logo-mobile.svg" width="34" height="37"
           alt="Логотип Кот Энерджи.">
-        <img class="logotype__logo-cat--tablet" src="img/logo-tablet.svg" width="174" height="52"
+        <img class="logotype__logo-cat--tablet" src="img/logo-tablet.svg" width="174" height="51"
           alt="Логотип Кэт Энерджи.">
       </a>
       <img class="main-header__logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101"
         alt="Логотип Cat Energy.">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
-      <nav class="main-header__nav main-nav">
+      <nav class="main-header__nav main-nav main-nav--closed main-nav--opened">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+          <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24"/>
+          </svg>
+        </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list reset-list">
             <li class="main-nav__item main-nav__item--active">
-              <a  class="main-nav__link" href="#">Главная</a>
+              <a class="main-nav__link" href="#">Главная</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
@@ -60,20 +63,33 @@
       <h2 class="visually-hidden">Каталог программ питания.</h2>
       <div class="catalog-program__wrapper">
         <ul class="catalog-program__list reset-list">
-          <li class="catalog-program__item catalog-program__item--cat-slim">
-            <h2 class="catalog-program__title">Похудение</h2>
-            <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-            </p>
+          <li class="catalog-program__item">
+            <div class="catalog-program__wrapper-title">
+              <div class="catalog-program__icon catalog-program__icon--cat-slim"></div>
+              <h2 class="catalog-program__title">Похудение</h2>
+            </div>
+            <div class="catalog-program__wrapper-icon-tablet">
+              <p class="catalog-program__text">Ваш кот весит больше собаки и почти<br> утратил способность лазить по
+                деревьям?<br>
+                Пора на диету! Cat Energy Slim поможет<br> вашему питомцу сбросить лишний вес.
+              </p>
+              <div class="catalog-program__icon-tablet catalog-program__icon--cat-slim-tablet"></div>
+            </div>
             <a class="catalog-program__toggle catalog-program-slim" href="#">
               каталог slim
             </a>
           </li>
-          <li class="catalog-program__item catalog-program__item--cat-pro">
-            <h2 class="catalog-program__title">Набор массы</h2>
-            <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
-              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
+          <li class="catalog-program__item">
+            <div class="catalog-program__wrapper-title">
+              <div class="catalog-program__icon catalog-program__icon--cat-pro"></div>
+              <h2 class="catalog-program__title">Набор массы</h2>
+            </div>
+            <div class="catalog-program__wrapper-icon-tablet">
+              <p class="catalog-program__text">Заработать авторитет среди дворовых котов<br> и даже собак?
+                Серия Cat Energy Pro поможет <br>вашему коту нарастить необходимые<br> мышцы!
+              </p>
+              <div class="catalog-program__icon-tablet catalog-program__icon--cat-pro-tablet"></div>
+            </div>
             <a class="catalog-program__toggle catalog-program-pro" href="#">каталог pro</a>
           </li>
         </ul>
@@ -85,19 +101,27 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list reset-list">
-          <li class="advantages__item advantages__item--leaf">
-            <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные
+          <li class="advantages__item">
+            <div class="advantages__icon advantages__icon--leaf"></div>
+            <p class="advantages__description">Функциональное питание<br> содержит только
+              полезные<br> питательные
               вещества.</p>
-          <li class="advantages__item advantages__item--powder">
-            <p class="advantages__description">Выпускается в виде порошка,<br> который нужно лишь залить<br> кипятком и
+          <li class="advantages__item">
+            <div class="advantages__icon advantages__icon--powder"></div>
+            <p class="advantages__description">Выпускается в виде порошка,<br> который
+              нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
-          <li class="advantages__item advantages__item--eat">
-            <p class="advantages__description">Замените один-два приема<br> обычной еды на наше<br> функциональное
+          <li class="advantages__item">
+            <div class="advantages__icon advantages__icon--eat"></div>
+            <p class="advantages__description">Замените один-два приема<br> обычной еды на
+              наше<br> функциональное
               питание.</p>
           </li>
-          <li class="advantages__item advantages__item--time">
-            <p class="advantages__description">Уже через месяц<br> наслаждайтесь изменениями<br> к лучшему вашего
+          <li class="advantages__item">
+            <div class="advantages__icon advantages__icon--time"></div>
+            <p class="advantages__description">Уже через месяц<br> наслаждайтесь
+              изменениями<br> к лучшему вашего
               питомца!</p>
           </li>
         </ul>
@@ -115,24 +139,24 @@
               Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
               часов в день.
             </p>
-            <table class="live-example__statistic module">
+            <div class="live-example__statistic module">
 
-              <tr class="module__description">
-                <td class="module__number">5 кг</td>
-                <td class="module__text module__text--lose-weight">снижение <br> веса</td>
-              </tr>
+              <div class="module__description">
+                <span class="module__number">5 кг</span>
+                <span class="module__text module__text--lose-weight">снижение <br> веса</span>
+              </div>
 
-              <tr class="module__description">
-                <td class="module__number">60 дней</td>
-                <td class="module__text module__text--period">затрачено <br> времени</td>
-              </tr>
+              <div class="module__description">
+                <span class="module__number">60 дней</span>
+                <span class="module__text module__text--period">затрачено <br> времени</span>
+              </div>
 
-              <tr class="module__description module__description--result">
-                <td class="module__number module__text--result">Затраты на питание:</td>
-                <td class="module__number module__text--result">15 000 руб.</td>
-              </tr>
+              <div class="module__description module__description--result">
+                <span class="module__number module__text--result">Затраты на питание:</span>
+                <span class="module__number module__text--result"> 15 000 руб.</span>
+              </div>
 
-            </table>
+            </div>
           </section>
           <div class="live-example__wrapper--tablet">
             <div class="live-example__cat-comparison cat-comparison">
@@ -169,11 +193,16 @@
             <h2 class="collaboration__title">приглашаем<br>к сотрудничеству <br>дилеров!</h2>
             <p class="collaboration__address">ул. Большая<br> Конюшенная, д. 19/8 <br>Санкт-Петербург</p>
           </div>
-          <div class="collaboration__map">
-            <h3 class="visually-hidden">Наше местоположение.</h3>
-            <img class="collaboration__image-map" src="img/map.jpg" alt="Карта, с отмеченной локацией." width="320"
-              height="362">
-          </div>
+        </div>
+        <div class="collaboration__map">
+          <h3 class="visually-hidden">Наше местоположение.</h3>
+          <iframe class="collaboration__google-map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+            width="100%"
+            height="362"
+            allowfullscreen
+            title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+          </iframe>
         </div>
       </section>
 
