адаптивная сетка для блока catalog-program

--- a/source/index.html
+++ b/source/index.html
@@ -69,9 +69,9 @@
               <h2 class="catalog-program__title">Похудение</h2>
             </div>
             <div class="catalog-program__wrapper-icon-tablet">
-              <p class="catalog-program__text">Ваш кот весит больше собаки и почти<br> утратил способность лазить по
-                деревьям?<br>
-                Пора на диету! Cat Energy Slim поможет<br> вашему питомцу сбросить лишний вес.
+              <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по
+                деревьям?
+                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
               <div class="catalog-program__icon-tablet catalog-program__icon--cat-slim-tablet"></div>
             </div>
@@ -85,8 +85,8 @@
               <h2 class="catalog-program__title">Набор массы</h2>
             </div>
             <div class="catalog-program__wrapper-icon-tablet">
-              <p class="catalog-program__text">Заработать авторитет среди дворовых котов<br> и даже собак?
-                Серия Cat Energy Pro поможет <br>вашему коту нарастить необходимые<br> мышцы!
+              <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
               <div class="catalog-program__icon-tablet catalog-program__icon--cat-pro-tablet"></div>
             </div>
@@ -101,24 +101,24 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list reset-list">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--first">
             <div class="advantages__icon advantages__icon--leaf"></div>
             <p class="advantages__description">Функциональное питание<br> содержит только
               полезные<br> питательные
               вещества.</p>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--two" >
             <div class="advantages__icon advantages__icon--powder"></div>
             <p class="advantages__description">Выпускается в виде порошка,<br> который
               нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--three">
             <div class="advantages__icon advantages__icon--eat"></div>
             <p class="advantages__description">Замените один-два приема<br> обычной еды на
               наше<br> функциональное
               питание.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--four">
             <div class="advantages__icon advantages__icon--time"></div>
             <p class="advantages__description">Уже через месяц<br> наслаждайтесь
               изменениями<br> к лучшему вашего
