адаптивная сетка для блока живой пример

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
       </a>
       <img class="main-header__logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101"
         alt="Логотип Cat Energy.">
-      <nav class="main-header__nav main-nav main-nav--closed main-nav--opened">
+      <nav class="main-header__nav main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
           <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,8 +51,12 @@
             <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
           </div>
         </div>
-        <img class="promo__image" src="img/promo-cat-energy.png"
+        <img class="promo__image--mobile" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
+        <!-- <img class="promo__image&#45;&#45;tablet" src="img/promo-cat-energy-tablet.png" width="709" height="609"
+           alt="Фотография функционального питания для кошек Cat Energy.">
+         <img class="promo__image&#45;&#45;desktop" src="img/promo-cat-energy-desktop.png" width="552" height="499"
+           alt="Фотография функционального питания для кошек Cat Energy.">-->
         <div class="promo__button-wrapper">
           <button class="promo__button-choose-program" type="button">Подобрать программу</button>
         </div>
@@ -106,7 +110,7 @@
             <p class="advantages__description">Функциональное питание<br> содержит только
               полезные<br> питательные
               вещества.</p>
-          <li class="advantages__item advantages__item--two" >
+          <li class="advantages__item advantages__item--two">
             <div class="advantages__icon advantages__icon--powder"></div>
             <p class="advantages__description">Выпускается в виде порошка,<br> который
               нужно лишь залить<br> кипятком и
@@ -141,15 +145,16 @@
             </p>
             <div class="live-example__statistic module">
 
-              <div class="module__description">
-                <span class="module__number">5 кг</span>
-                <span class="module__text module__text--lose-weight">снижение <br> веса</span>
-              </div>
+                <div class="module__description">
+                  <span class="module__number">5 кг</span>
+                  <span class="module__text module__text--lose-weight">снижение <br> веса</span>
+                </div>
 
-              <div class="module__description">
-                <span class="module__number">60 дней</span>
-                <span class="module__text module__text--period">затрачено <br> времени</span>
-              </div>
+                <div class="module__description">
+                  <span class="module__number">60 дней</span>
+                  <span class="module__text module__text--period">затрачено <br> времени</span>
+                </div>
+
 
               <div class="module__description module__description--result">
                 <span class="module__number module__text--result">Затраты на питание:</span>
