--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,8 @@
       <nav class="main-header__nav main-nav main-nav--closed main-nav--js">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
-          <svg class=" main-nav__burger" width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class=" main-nav__burger" width="24" height="18" viewBox="0 0 24 18" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24" fill="#000000"/>
           </svg>
         </button>
@@ -44,18 +45,18 @@
   </header>
   <!--Основной блог -->
   <main class="main-container">
-   <!-- <section class="promo">
-      <div class="promo__wrapper">
-        <h1 class="promo__title">Функциональное питание для котов</h1>
-        <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
-        <img class="promo__image&#45;&#45;mobile" src="img/promo-cat-energy.png"
+    <section class="promo">
+      <div class="promo__wrapper container">
+        <h2 class="promo__title">Функциональное<br> питание для котов</h2>
+        <p class="promo__subtitle">Занялся собой? Займись котом!</p>
+        <img class="promo__image" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
+        <img class="promo__image--tablet" src="img/promo-cat-energy-tablet.png"
+          alt="Фотография функционального питания для кошек Cat Energy." width="709" height="609">
+        <img class="promo__image--desktop" src="img/promo-cat-energy-desktop.png" width="552" height="499" alt="Фотография функционального питания для кошек Cat Energy.">
+        <a class="promo__button-choose-program" href="form.html">Подобрать программу</a>
       </div>
-      <div class="promo__button-wrapper">
-        <button class="promo__button-choose-program" type="button">Подобрать программу</button>
-      </div>
-
-    </section>-->
+    </section>
 
     <section class="catalog-program">
       <h2 class="visually-hidden">Каталог программ питания.</h2>
@@ -99,24 +100,24 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list reset-list">
-          <li class="advantages__item advantages__item--first">
+          <li class="advantages__item">
             <div class="advantages__icon advantages__icon--leaf"></div>
             <p class="advantages__description">Функциональное питание<br> содержит только
               полезные<br> питательные
               вещества.</p>
-          <li class="advantages__item advantages__item--two">
+          <li class="advantages__item">
             <div class="advantages__icon advantages__icon--powder"></div>
             <p class="advantages__description">Выпускается в виде порошка,<br> который
               нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
-          <li class="advantages__item advantages__item--three">
+          <li class="advantages__item">
             <div class="advantages__icon advantages__icon--eat"></div>
             <p class="advantages__description">Замените один-два приема<br> обычной еды на
               наше<br> функциональное
               питание.</p>
           </li>
-          <li class="advantages__item advantages__item--four">
+          <li class="advantages__item">
             <div class="advantages__icon advantages__icon--time"></div>
             <p class="advantages__description">Уже через месяц<br> наслаждайтесь
               изменениями<br> к лучшему вашего
