--- a/source/index.html
+++ b/source/index.html
@@ -47,13 +47,16 @@
   <main class="main-container">
     <section class="promo">
       <div class="promo__wrapper container">
-        <h2 class="promo__title">Функциональное<br> питание для котов</h2>
-        <p class="promo__subtitle">Занялся собой? Займись котом!</p>
+        <div class="promo__text">
+          <h2 class="promo__title">Функциональное<br> питание для котов</h2>
+          <p class="promo__subtitle">Занялся собой? Займись котом!</p>
+        </div>
         <img class="promo__image" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
         <img class="promo__image--tablet" src="img/promo-cat-energy-tablet.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="709" height="609">
-        <img class="promo__image--desktop" src="img/promo-cat-energy-desktop.png" width="552" height="499" alt="Фотография функционального питания для кошек Cat Energy.">
+        <img class="promo__image--desktop" src="img/promo-cat-energy-desktop.png" width="552" height="499"
+          alt="Фотография функционального питания для кошек Cat Energy.">
         <a class="promo__button-choose-program" href="form.html">Подобрать программу</a>
       </div>
     </section>
